--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 30px;
+  margin: 4vh 8vh;
   background: #000;
   color: #fff;
   font-family: 'Quicksand', sans-serif;
@@ -22,25 +22,25 @@ body {
 
 .price-wrapper {
   position: absolute;
-  top: 2.5em;
-  left: -0.25em;
+  top: 2em;
+  left: -0.75em;
   color: #fff;
 
 
-  width: 2em;
-  height: 2em;
+  width: 2.5em;
+  height: 2.5em;
   padding: 0.3em;
   border-radius: 50%;
   background: #000;
-  border: 2px solid #fff;
+  /* border: 2px solid #444; */
 }
 
 .price {
   position: absolute;
-  top: 0.1em;
-  left: 0.25em;
+  top: -0.1em;
+  left: 0;
+  font-size: 2.6em;
   font-family: 'Shrikhand', cursive;
-  font-size: 1.7em;
 }
 
 .price::before {
@@ -84,16 +84,16 @@ object.glass-icon {
 
 .abv {
   display: inline-block;
-  font-size: 1.2em;
-  margin-left: 0.8em;
-  margin-top: 0.4em;
+  font-size: 1.4em;
+  margin-left: 0.25em;
+  margin-top: 0.1em;
   vertical-align: top;
   color: #ffffce;
 }
 
 .abv::before {
-  content: 'ABV';
-  margin-right: 0.5em;
+  content: '–';
+  margin-right: 0.3em;
 }
 
 .abv::after {
@@ -102,7 +102,7 @@ object.glass-icon {
 
 .assorted-price-wrapper {
   display: inline-block;
-  margin-top: 0.7em;
+  margin-top: 0.5em;
 }
 
 .assorted-price {
@@ -159,9 +159,12 @@ object.glass-icon {
 img.main-logo {
   position: fixed;
   bottom: 1em;
-  left: 1em;
+
+  left: calc(50vw - 12.5vw) ;
+
   width: 25vw;
 }
+/*
 
 .announce-section {
   position: fixed;
@@ -171,10 +174,13 @@ img.main-logo {
   height: 18vh;
 }
 
+*/
+
 .flights {
+  font-size: 1.7vh;
   position: absolute;
-  top: 2.4em;
-  left: 0;
+  bottom: 4.2em;
+  left: 4.3em;
   padding-left: 10em;
 }
 
@@ -227,15 +233,15 @@ img.main-logo {
 }
 
 .flights .price {
-  top: 0.25em;
-  left: 0.1em;
+  top: -0.05em;
+  left: -0.6em;
 }
 
 .taproom-notes {
   position: absolute;
-  right: 3em;
-  top: 1em;
-  font-size: 1.25em;
+  right: 4.9em;
+  bottom: 2.8em;
+  font-size: 2vh;
 }
 
 .taproom-notes div {
