--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ object.glass-icon {
   margin: 0;
   font-size: 2.25em;
   font-weight: normal;
-  font-family: 'Bangers', cursive;
+  font-family: 'Amatic SC', cursive;
 }
 
 .beer h2 {
